class BinaryImage: convert binary image to halftone image with L1 distances.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,6 +13,6 @@
         <div><input type="text" name="width" id="width"><label for="width">Width</label></div>
         <button type="submit">Send</button>
     </form>
-    <img alt="work" th:src=${@environment.getProperty('thymeleaf.image.path')}>
+    <img alt="work" th:src=${@environment.getProperty('thymeleaf.image.path')} height="500" width="200">
 </body>
 </html>
