--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,18 +1,70 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-      xsi:schemaLocation="http://www.thymeleaf.org ">
+      xsi:schemaLocation="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Photo Editor</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="../static/style.css"/>
 </head>
 <body>
 
-    <form action="/" method="post">
-        <div><input type="text" name="height" id="height"><label for="height">Height</label></div>
-        <div><input type="text" name="width" id="width"><label for="width">Width</label></div>
-        <button type="submit">Send</button>
-    </form>
-    <img alt="work" th:src=${@environment.getProperty('thymeleaf.image.path')} height="500" width="200">
+<div class="d-flex flex-row">
+    <div class="photo">
+        <form action="/" method="post">
+            <div class="col-sm-2">
+                <label for="width" >Width</label>
+                <input type="text" class="form-control col-xs-2" name="width">
+            </div>
+            <div class="col-sm-2">
+                <label for="height" class="form-label">Height</label>
+                <input type="text" class="form-control col-xs-2" name="height">
+            </div>
+            <button type="submit" class="btn btn-success">Send</button>
+        </form>
+        <img alt="work" th:src=${@environment.getProperty('thymeleaf.image.path')}>
+
+    </div>
+    <div class="tables w-25 p-3 h-50">
+        <p class="text-center">Binary matrix of image:</p>
+        <table class="table1 table-bordered">
+            <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th th:each="head : ${#numbers.sequence(0, binaryMatrix.length - 1)}" scope="col" th:text="${head}"></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="arr, body : ${binaryMatrix}">
+                <th scope="row" th:text="${body.index}"></th>
+                <td th:each="element : ${arr}" th:text="${element}" ></td>
+            </tr>
+            </tbody>
+        </table>
+        <p class="text-center">L1 distances matrix:</p>
+        <table class="table2 table-bordered">
+            <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th th:each="head : ${#numbers.sequence(0, halftoneMatrix.length - 1)}" scope="col" th:text="${head}"></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="arr, body : ${halftoneMatrix}">
+                <th scope="row" th:text="${body.index}"></th>
+                <td th:each="element : ${arr}" th:text="${element}" ></td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+
+</div>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+        crossorigin="anonymous"></script>
 </body>
 </html>
